--- a/index.html
+++ b/index.html
@@ -5,11 +5,30 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+    <!-- IMPORT BOOTSRAP -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
+
     <title>Bad Words</title>
 </head>
 
 <body>
+    <div class="container">
 
+        <form action="badwords.php" method="get" class="my-5">
+            <div class="mb-3">
+                <label for="text" class="form-label">Inserisci il testo</label>
+                <textarea class="form-control" id="text" rows="3" name="text"></textarea>
+            </div>
+            <div class="mb-3">
+                <label for="badword" class="form-label">Parola da censurare:</label>
+                <input type="text" class="form-control" id="badword" placeholder="Scrivi parola da censurare"
+                    name="badword">
+            </div>
+            <button type="submit" class="btn btn-primary">Invia</button>
+        </form>
+    </div>
 </body>
 
 </html>
