Add filter and stamp to badwords.php

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 <body>
     <div class="container">
 
-        <form action="badwords.php" method="get" class="my-5">
+        <form action="badwords.php" method="GET" class="my-5">
             <div class="mb-3">
                 <label for="text" class="form-label">Inserisci il testo</label>
                 <textarea class="form-control" id="text" rows="3" name="text"></textarea>
