--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
                     name="badword">
             </div>
             <button type="submit" class="btn btn-primary">Invia</button>
+            <button type="reset" class="btn btn-danger">Reset</button>
         </form>
     </div>
 </body>
